# LogicGateSim

./: .gitignore  .main.c.swp  CMakeLists.txt  IOfile.c  IOfile.h  README.md  core.c  core.h  in.txt  main.c  out.txt  simulator.c  simulator.h  testinput.txt
src/: CMakeLists.txt  IOfile.c  main.c  simulator.c
src/core/: CMakeLists.txt  core.c  core.h
src/iofile/: CMakeLists.txt  iofile.c  iofile.h
src/logicgatelib/: CMakeLists.txt  logicgatelib.c  logicgatelib.h
src/simulator/: CMakeLists.txt  simulator.c  simulator.h
test/: CMakeLists.txt  TestIOFile.c
test-files/: test-in.txt  test-out.txt
test/IOfile/: CMakeLists.txt  IOfile-test.c  iofile-lib-test.c
test/core/: CMakeLists.txt  core-test.c  core-test.h
test/iofile/: CMakeLists.txt  iofile-lib-test.c  iofile-lib-test.h
test/logicsimlib/: CMakeLists.txt  logicsimlib-test.c  logicsimlib-test.h
test/simulator/: CMakeLists.txt  simulator-test.c
test/suite_1/: CMakeLists.txt  TestIOFile.c
testBuild/: DartConfiguration.tcl
testBuild/src/: release
testBuild/test/core/: core_app
testBuild/test/iofile/: iofile_module_app
testBuild/test/logicsimlib/: logicsimlib_module_app
testBuild/test/simulator/: simulator_app
